--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,7 @@
-1. Сделать адаптивную форму для теста (сверстать, оформить визуально, подключить джс и быстренько продумать логику расчета)
-2. Сделать нормальное описание для титульника и для формы
-3. Сделать страницу-галарею, через какие то асинхронные запросы брать изображения из базы данных 
-(грид на страницах с формой и с галареей такого же принципа как и на главной странице)
-4. Сделать 4 страницы слайдера для каждого типа объектов
+1. Подобрать фотки для отсавшихся трех категорий
+2. Подобрать текст, для всех  объектов
+3. Сделать смену темы через data-theme (реализация через классы удачнее, так что пока ок)
+4. Добавить форме margin-bootom как-нибудь...
+
+5. Страница галереи
+6. Сделать форму для перевода световых лет в км/м/см
